--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,11 @@ language: node_js
 node_js:
    - "0.10"
 
+env:
+  global:
+  - ARTIFACTS_S3_BUCKET=P1Dashboard
+
 install:
    - npm install
+
+script: grunt
