--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
         "grunt": "~0.4.5",
         "grunt-contrib-jshint": "~0.10.0",
         "grunt-contrib-nodeunit": "~0.4.1",
-        "grunt-contrib-uglify": "~0.5.0"
+        "grunt-contrib-uglify": "~0.5.0",
+        "grunt-contrib-jasmine": "~0.6.0",
+        "grunt-contrib-clean": "~0.5.0",
+        "grunt-contrib-watch": "~0.6.0"
     },
     "scripts": {
         "test": "grunt travis --verbose"
