--- a/package.json
+++ b/package.json
@@ -3,12 +3,33 @@
     "version": "0.0.1",
     "devDependencies": {
         "grunt": "~0.4.5",
+        "grunt-css": "~0.5.4",
         "grunt-contrib-jshint": "~0.10.0",
         "grunt-contrib-nodeunit": "~0.4.1",
         "grunt-contrib-uglify": "~0.5.0",
         "grunt-contrib-jasmine": "~0.6.0",
         "grunt-contrib-clean": "~0.5.0",
-        "grunt-contrib-watch": "~0.6.0"
+        "grunt-contrib-watch": "~0.6.0",
+        "grunt-contrib-connect": "~0.1.2",
+        "grunt-contrib-concat": "~0.3.0",
+        "grunt-shell": "~0.2.2",
+        "grunt-contrib-copy": "~0.4.1",
+        "karma-mocha": "latest",
+        "karma-chrome-launcher": "~0.1.0",
+        "karma-safari-launcher": "latest",
+        "karma-firefox-launcher": "~0.1.0",
+        "karma-ng-scenario": "latest",
+        "chai": "1.4.0",
+        "karma-script-launcher": "~0.1.0",
+        "karma-html2js-preprocessor": "~0.1.0",
+        "karma-jasmine": "~0.1.3",
+        "karma-requirejs": "~0.1.0",
+        "karma-coffee-preprocessor": "~0.1.0",
+        "karma-phantomjs-launcher": "~0.1.0",
+        "karma": "~0.10.2",
+        "grunt-karma": "~0.6.2",
+        "grunt-open": "~0.2.2",
+        "ng-midway-tester": "2.0.5"
     },
     "scripts": {
         "test": "grunt travis --verbose"
