--- a/package.json
+++ b/package.json
@@ -2,31 +2,46 @@
     "name": "finance-application",
     "version": "0.0.1",
     "devDependencies": {
+        "angular": "1.2.1",
+        "angular-route": "1.2.1",
+        "angular-mocks": "1.2.1",
+        "angularjs-scope.safeapply": "*",
+        "bootstrap.css": "2.1.1",
+        "components-font-awesome": "3.1.0",
+        "grunt": "~0.4.0"
+    },
+    "peerDependencies":{
+        "chai": "1.4.0",
         "grunt": "~0.4.5",
         "grunt-css": "~0.5.4",
-        "grunt-contrib-jshint": "~0.10.0",
-        "grunt-contrib-nodeunit": "~0.4.1",
-        "grunt-contrib-uglify": "~0.5.0",
-        "grunt-contrib-jasmine": "~0.6.0",
         "grunt-contrib-clean": "~0.5.0",
-        "grunt-contrib-watch": "~0.6.0",
-        "grunt-contrib-connect": "~0.1.2",
+        "grunt-contrib-coffee": "~0.10.0",
         "grunt-contrib-concat": "~0.3.0",
-        "grunt-shell": "~0.2.2",
+        "grunt-contrib-connect": "~0.1.2",
         "grunt-contrib-copy": "~0.4.1",
-        "karma-mocha": "latest",
-        "karma-chrome-launcher": "~0.1.0",
-        "karma-safari-launcher": "latest",
-        "karma-firefox-launcher": "~0.1.0",
-        "karma-ng-scenario": "latest",
-        "chai": "1.4.0",
-        "karma-script-launcher": "~0.1.0",
-        "karma-html2js-preprocessor": "~0.1.0",
-        "karma-jasmine": "~0.1.3",
-        "karma-phantomjs-launcher": "~0.1.0",
-        "karma": "~0.10.2",
+        "grunt-contrib-csslint": "~0.2.0",
+        "grunt-contrib-cssmin": "~0.9.0",
+        "grunt-contrib-htmlmin": "~0.2.0",
+        "grunt-contrib-jasmine": "~0.6.0",
+        "grunt-contrib-jshint": "~0.10.0",
+        "grunt-contrib-less": "~0.11.0",
+        "grunt-contrib-nodeunit": "~0.4.1",
+        "grunt-contrib-requirejs": "~0.4.1",
+        "grunt-contrib-uglify": "~0.5.0",
+        "grunt-contrib-watch": "~0.6.0",
         "grunt-karma": "~0.6.2",
         "grunt-open": "~0.2.2",
+        "grunt-shell": "~0.2.2",
+        "karma": "~0.10.2",
+        "karma-chrome-launcher": "~0.1.0",
+        "karma-firefox-launcher": "~0.1.0",
+        "karma-html2js-preprocessor": "~0.1.0",
+        "karma-jasmine": "~0.1.3",
+        "karma-mocha": "latest",
+        "karma-ng-scenario": "latest",
+        "karma-phantomjs-launcher": "~0.1.0",
+        "karma-safari-launcher": "latest",
+        "karma-script-launcher": "~0.1.0",
         "ng-midway-tester": "2.0.5"
     },
     "scripts": {
