--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
     "version": "0.0.1",
     "devDependencies": {
         "angular": "1.2.1",
-        "angular-route": "1.2.1",
-        "angular-mocks": "1.2.1",
+        "angular-route": "~1.2.x",
+        "angular-mocks": "~1.2.x",
         "angularjs-scope.safeapply": "*",
         "bootstrap.css": "2.1.1",
         "components-font-awesome": "3.1.0",
