--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
         "karma-jasmine": "~0.1.3",
         "karma-phantomjs-launcher": "~0.1.0",
         "karma-safari-launcher": "latest",
-        "karma-script-launcher": "~0.1.0",
+        "karma-script-launcher": "~0.1.0"
     },
     "scripts": {
         "test": "grunt travis --verbose"
