--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "grunt-karma": "~0.6.2",
         "grunt-open": "~0.2.2",
         "grunt-shell": "~0.2.2",
+        "karma-requirejs": "~0.2.0",
         "karma": "~0.10.2",
         "karma-chrome-launcher": "~0.1.0",
         "karma-firefox-launcher": "~0.1.0",
